--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,9 @@ dependencies {
     // DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
 
+    // Recycler View Animations
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+
+
+
 }
